<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="20dp"
  tools:context=".LoginActivity">

  <ImageView
    android:id="@+id/logo_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:transitionName="logo_image"
    android:src="@drawable/logo_ieca"/>

  <TextView
    android:id="@+id/login_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:transitionName="logo_title"
    android:textSize="40sp"
    android:textColor="@color/background"
    android:fontFamily="@font/montserrat_bold"/>

  <TextView
    android:id="@+id/login_instructions_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_instructions"
    android:textSize="18sp"
    android:fontFamily="@font/montserrat"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_layout_input"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      app:boxStrokeColor="@color/background"
      app:endIconTint="@color/background"
      app:hintTextColor="@color/background"
      app:startIconTint="@color/background"
      app:startIconDrawable="@drawable/baseline_email_24">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_layout_input"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      app:passwordToggleEnabled="true"
      app:boxStrokeColor="@color/background"
      app:endIconTint="@color/background"
      app:hintTextColor="@color/background"
      app:startIconTint="@color/background"
      app:startIconDrawable="@drawable/baseline_lock_24">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/forgot_password_button"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:background="#00000000"
      android:text="@string/forgot_password"
      android:textColor="@color/black"
      android:layout_gravity="end"
      android:elevation="0dp"
      android:layout_margin="5dp"/>

    <Button
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_in"
      android:backgroundTint="@color/background"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"/>

    <Button
      android:id="@+id/register_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#00000000"
      android:text="@string/register"
      android:fontFamily="@font/montserrat_bold"
      android:textColor="@color/background"
      android:layout_gravity="end"
      android:elevation="0dp"
      android:layout_margin="5dp"/>

  </LinearLayout>

</LinearLayout>