<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".NewCredentialsActivity">

  <ImageView
    android:id="@+id/back_button"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:src="@drawable/baseline_keyboard_arrow_left_24"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:clickable="true"/>

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/update_new_password_icon"
    android:contentDescription="@string/forgot_password"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update_password_title"
    android:textSize="30sp"
    android:textColor="@color/background"
    android:fontFamily="@font/montserrat_bold"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update_password_instructions"
    android:textSize="16sp"
    android:layout_marginBottom="30dp"
    android:fontFamily="@font/montserrat"
    android:layout_gravity="center"/>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_layout_input"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    app:boxStrokeColor="@color/background"
    app:endIconTint="@color/background"
    app:hintTextColor="@color/background"
    app:startIconTint="@color/background"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    app:startIconDrawable="@drawable/baseline_lock_reset_24"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/password_layout_confirm_input"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/confirm_password"
    app:boxStrokeColor="@color/background"
    app:endIconTint="@color/background"
    app:hintTextColor="@color/background"
    app:startIconTint="@color/background"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    app:startIconDrawable="@drawable/baseline_lock_reset_24"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password_confirm_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"/>

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/update_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="30dp"
    android:backgroundTint="@color/background"
    android:fontFamily="@font/montserrat_bold"
    android:text="@string/update" />

</LinearLayout>