<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".HomeActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="20dp"
    android:background="@color/background">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:src="@drawable/avatar"
      android:contentDescription="@string/full_name"
      android:layout_centerVertical="true"/>

    <TextView
      android:id="@+id/welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/welcome"
      android:textSize="20sp"
      android:textColor="@color/white"
      android:fontFamily="@font/montserrat"
      android:layout_toEndOf="@id/imageView"
      android:layout_centerVertical="true"
      android:layout_marginStart="10dp"/>

    <TextView
      android:id="@+id/full_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/full_name"
      android:textSize="20sp"
      android:textColor="@color/white"
      android:fontFamily="@font/montserrat_bold"
      android:layout_toEndOf="@id/imageView"
      android:layout_below="@+id/welcome"
      android:layout_centerVertical="true"
      android:layout_marginStart="10dp"/>

  </RelativeLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_marginTop="-100dp">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/edit_profile"
      android:layout_width="0dp"
      android:layout_height="125dp"
      android:layout_weight="1"
      app:cardBackgroundColor="@color/white"
      app:cardElevation="10dp"
      app:strokeWidth="0dp"
      android:layout_margin="10dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/pencil" />

        <TextView
          android:id="@+id/homework_complete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/edit_profile"
          android:textSize="20sp"
          android:layout_marginTop="10dp"
          android:textColor="@color/background"
          android:fontFamily="@font/montserrat_bold" />

      </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/logout"
      android:layout_width="0dp"
      android:layout_height="125dp"
      android:layout_weight="1"
      app:cardBackgroundColor="@color/white"
      app:cardElevation="10dp"
      app:strokeWidth="0dp"
      android:layout_margin="10dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/logout" />

        <TextView
          android:id="@+id/examn_complete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/logout"
          android:textSize="20sp"
          android:textColor="@color/background"
          android:layout_marginTop="10dp"
          android:fontFamily="@font/montserrat_bold" />

      </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

  </LinearLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/explorer"
    android:textAlignment="center"
    android:layout_marginTop="30dp"
    android:textSize="24sp"
    android:textColor="@color/background"
    android:fontFamily="@font/montserrat_bold"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"/>

</LinearLayout>